fixed fauna bug

--- a/index.html
+++ b/index.html
@@ -641,10 +641,10 @@
         </div>
       </section>
       <!-- Fauna Facts Section -->
-      <button id="toggleBtn">
-        Show Crows
-    </button>
       <section id="fauna-facts-section">
+        <button id="toggleBtn">
+          Show Crows
+      </button>
         <h2>Fauna of Pondicherry University: Dog Hotspots</h2>
         <p>
           Many dogs reside across the university campus, often forming social
@@ -715,29 +715,30 @@
             protective and prefer to stay in quiet, less-disturbed areas.
           </p>
         </div>
-      </section>
-      <section id="fauna-facts-section">
-        <h2>Fauna of Pondicherry University: Crow Hotspots</h2>
-        <p>
-          Crows are a common sight across Pondicherry University, often seen in trees, near canteens, and around hostel rooftops. Known for their intelligence and adaptability, these birds thrive in the campus environment, foraging for food and nesting in tall trees. Their presence adds to the university's rich ecological diversity and offers opportunities for observing fascinating avian behavior up close.
-        </p>
-
-        <div class="fauna-facts">
-          <h3>Common Crow Behavior Observations</h3>
+        <div>
+          <h2>Fauna of Pondicherry University: Crow Hotspots</h2>
           <p>
-            <b>Territorial Instincts:</b> Crows often establish territories around tree clusters, rooftops, and food sources like garbage bins, canteens, and marketplaces. They defend these areas from other animals and rival crow groups.
+            Crows are a common sight across Pondicherry University, often seen in trees, near canteens, and around hostel rooftops. Known for their intelligence and adaptability, these birds thrive in the campus environment, foraging for food and nesting in tall trees. Their presence adds to the university's rich ecological diversity and offers opportunities for observing fascinating avian behavior up close.
           </p>
-          <p>
-            <b>Routine Activities:</b>Crows typically follow a daily routine, scavenging for food in open areas, markets, and around human settlements, resting in shaded trees or high structures, often grooming themselves or socializing, gathering in large numbers (called a roost) at specific spots like tall trees or quiet areas for resting.
-          </p>
-          <p>
-            <b>Social Groups:</b>Crows live in social groups or flocks. These groups have a certain pecking order (hierarchy). Stronger, older crows dominates. Conflicts happen over food, space, or nesting spots. Crows often cooperate to chase away threats or alert each other to danger.
-          </p>
-          <p>
-            <b>Nesting & Parenting:</b> Crows build nests high up in trees or buildings using twigs, wires, and cloth pieces. Mother crows are highly protective of their nests and chicks. They often stay in quiet, undisturbed spots and can become aggressive if approached
-          </p>
+  
+          <div class="fauna-facts">
+            <h3>Common Crow Behavior Observations</h3>
+            <p>
+              <b>Territorial Instincts:</b> Crows often establish territories around tree clusters, rooftops, and food sources like garbage bins, canteens, and marketplaces. They defend these areas from other animals and rival crow groups.
+            </p>
+            <p>
+              <b>Routine Activities:</b>Crows typically follow a daily routine, scavenging for food in open areas, markets, and around human settlements, resting in shaded trees or high structures, often grooming themselves or socializing, gathering in large numbers (called a roost) at specific spots like tall trees or quiet areas for resting.
+            </p>
+            <p>
+              <b>Social Groups:</b>Crows live in social groups or flocks. These groups have a certain pecking order (hierarchy). Stronger, older crows dominates. Conflicts happen over food, space, or nesting spots. Crows often cooperate to chase away threats or alert each other to danger.
+            </p>
+            <p>
+              <b>Nesting & Parenting:</b> Crows build nests high up in trees or buildings using twigs, wires, and cloth pieces. Mother crows are highly protective of their nests and chicks. They often stay in quiet, undisturbed spots and can become aggressive if approached
+            </p>
+          </div>
         </div>
       </section>
+      
     </div>
 
     <!-- Google Maps API -->
