--- a/index.html
+++ b/index.html
@@ -644,12 +644,41 @@
       <section id="fauna-facts-section">
         <button id="toggleBtn">
           Show Crows
-      </button>
-        <h2>Fauna of Pondicherry University: Dog Hotspots</h2>
+      </button> <br>
+        <h1>BINOMIAL NAME: <I> Canis familiaris  </I></h1>
+      <P ><b>The dog</b> is a domesticated descendant of the gray wolf. Also called the domestic dog, it was selectively bred from an extinct population of wolves during the Late Pleistocene by hunter-gatherers. The dog was the first species to be domesticated by humans, over 14,000 years ago and before the development of agriculture. Due to their long association with humans, dogs have gained the ability to thrive on a starch-rich diet that would be inadequate for other canids.
+        <H2>Scientific classification</H2> <br>
+        <div class="fauna-hostel">
+          <H2>Scientific classification</H2> 
+          <ul>
+            <li><b> Domain:</b> 		Eukaryota</li>
+            <li><b>Kingdom:</b> 	Animalia</li>
+            <li><b>Phylum:</b> 	Chordata</li>
+            <li><b> Class:</b> Mammalia</li>
+            <li><b>Order:</b> Carnivora</li>
+            <li><b> Family:</b> Canidae</li>
+            <li><b> Genus:</b> Canis</li>
+            <li><b> Species:</b> C. familiaris</li>
+          </ul>
+
+        </div>
+        <div class="ecoimp">
+        	 <h1>ECOLOGICAL ROLE:</h1>
+         <b>Natural Pest Control</b> <br>
+         Stray dogs help in rodent populations by preying on them, which keeps their population in check. It also reduces the need to spray chemical pesticides to kill these rodents, thereby promoting a healthier environment. Stray dogs also help in managing the population of small insects and other pests; this limits the spread of diseases and protects the crops from being damaged. Stray dogs role in balancing this process highlights their importance and the need to ensure that their population is effectively managed as we also acknowledge their ecological contributions. <br>
+         
+        <b> Ecological Balancers</b> <br>
+         By preying on small insects and rodents, stray dogs play an important role in indirectly supporting the survival of various plants and animal species that otherwise can be impacted by these pests. Additionally, stray dogs scavenging role helps in the process of decomposition of organic  waste. They consume these wastes, including animal carcasses, and aid in decomposition and nutrients cycling in the environment. <br>
+         
+        <b> Human Benefits</b> <br>
+         In addition to their ecological role of reducing rodents and other pests, which help in reducing the spread of several diseases such as leptospirosis and hantavirus, stray dogs also offer social and emotional benefits to the communities. They can be informal companions to people, especially the lonely or those who live in isolation. Their presence also brings people together who shower them with care and affection. This enhances empathy and kindness in the community. <br>
+      </P>
+    </div>
+        <h2> Pondicherry University Dog Hotspots:</h2>
         <p>
           Many dogs reside across the university campus, often forming social
           groups and territories. Here are some observed dog populations in
-          different hostel areas:
+           <b>students' residential areas</b>:
         </p>
 
         <div class="fauna-container">
@@ -664,6 +693,7 @@
               <li><b>Yamuna:</b> 3 dogs</li>
               <li><b>Saraswati:</b> 4 dogs</li>
               <li><b>Kaveri:</b> 6 dogs, 2 puppies</li>
+              <li><b>Tea Time:</b> 3 dogs</li>
             </ul>
           </div>
 
@@ -683,6 +713,8 @@
               <li><b>Pavendar Bharathidasan:</b> 1 dog</li>
               <li><b>CV Raman Hostel:</b> 2 dogs</li>
               <li><b>Illango Hostel:</b> 2 dogs</li>
+              <li><b>Tagore Hostel:</b> 2 dogs</li>
+              <li><b>Silver Jubilee Campus:</b> 9 dogs</li>
             </ul>
           </div>
         </div>
