--- a/index.html
+++ b/index.html
@@ -718,7 +718,10 @@
             </ul>
           </div>
         </div>
-
+<div class="fauna-hostel">
+          <h3>TOTAL COUNT(APPROXIMATELY): 78 DOGS AND 14 PUPPIES </h3>
+          
+        </div>
         <!-- Dog Behavior Facts -->
         <div class="fauna-facts">
           <h3>Common Dog Behavior Observations</h3>
