add more crow data connected home to index, added crow details

--- a/Homepg.html
+++ b/Homepg.html
@@ -170,7 +170,8 @@
             <source src="PU Google Earth.mp4" type="video/mp4" >
             Your browser does not support the video tag.
           </video>
-          <button id="explorebt">Explore  &#x2192;</button>
+          <button id="explorebt" onclick="window.location.href='index.html'">Explore &#x2192;</button>
+
     </div>
     
     <hr>
