only thing left is to connect the gallery

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="#" id="flora-btn">Flora</a></li>
         <li><a href="#" id="fauna-btn">Fauna</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="/gallery.html">Gallery</a></li>
       </ul>
     </div>
 
