--- a/index.html
+++ b/index.html
@@ -586,21 +586,7 @@
               src="Plants/coralwood/coralwoodtree.jpg"
               alt="Coralwood Tree"
             />
-            <h3></h3>
-            <p>
-              <b>Origin:</b> Southern Asia and Pacific Islands 
-            </p>
-            <p><b>Coordinates:</b>12.034882, 79.857618 </p>
-            <p>
-              Also called Red Sandalwood or Red Bead Tree, this legume produces bright red seeds that are used as beads in jewelry and for traditional weight measurements (they each weigh almost exactly one grain/0.065g). The tree can grow up to 20 meters tall and provides valuable hardwood timber with a red heartwood.
-            </p>
-          </div>
-          <div class="flora-item">
-            <img
-              src="Plants/coralwood/coralwoodtree.jpg"
-              alt="Coralwood Tree"
-            />
-            <h3></h3>
+            <h3>Red Sandalwood</h3>
             <p>
               <b>Origin:</b> Southern Asia and Pacific Islands 
             </p>
