--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ hr {
         <source src="PU Google Earth.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <button id="explorebt" onclick="window.location.href='index.html'">Explore →</button>
+    <button id="explorebt" onclick="window.location.href='home1.html'">Explore →</button>
 </div>
 
 <hr>
