--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ hr {
         <source src="PU Google Earth.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <button id="explorebt" onclick="window.location.href='home1.html'">Explore →</button>
+    <button id="explorebt" onclick="window.location.href='./home1.html'">Explore →</button>
 </div>
 
 <hr>
@@ -366,7 +366,7 @@ hr {
 
     <div class="acknowledgment-section">
         <div class="ack-img">
-            <img src="/ProfilePhoto-Gajalakshmi-768x826.png" alt="Dr. S. Gajalakshmi">
+            <img src="./ProfilePhoto-Gajalakshmi-768x826.png" alt="Dr. S. Gajalakshmi">
             <p class="caption">Dr. S. Gajalakshmi<br><span>Head of the Department</span></p>
         </div>
         <div class="ack-text">
@@ -410,7 +410,7 @@ hr {
 
 <div class="team-photos">
     <div class="member">
-        <img src="/team/Athul.jpg" alt="Athul Krishnan TR">
+        <img src="./team/Athul.jpg" alt="Athul Krishnan TR">
         <p>Athul Krishnan TR</p>
     </div>
     <div class="member">
@@ -422,11 +422,11 @@ hr {
         <p>Fuad PP</p>
     </div>
     <div class="member">
-        <img src="/team/gokul.jpg" alt="Gokul G">
+        <img src="./team/gokul.jpg" alt="Gokul G">
         <p>Gokul G</p>
     </div>
     <div class="member">
-        <img src="/team/maalu.jpg" alt="Lakshmi Nandana B">
+        <img src="./team/maalu.jpg" alt="Lakshmi Nandana B">
         <p>Lakshmi Nandana B</p>
     </div>
     <div class="member">
@@ -438,7 +438,7 @@ hr {
         <p>Shwetha P</p>
     </div>
     <div class="member">
-        <img src="/team/me.jpg" alt="Sivangi Sankar">
+        <img src="./team/me.jpg" alt="Sivangi Sankar">
         <p>Sivangi Sankar</p>
     </div>
     <div class="member">
