added pics and a moving forward

--- a/index.html
+++ b/index.html
@@ -294,6 +294,30 @@ hr {
     margin-top: 8px;
     color: #d7f4de;
 }
+.moving-forward {
+  margin: 60px auto;
+  background-color: #e7f5e9;
+  border-left: 8px solid #2c5046;
+  padding: 30px 40px;
+  border-radius: 15px;
+  max-width: 1000px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  font-family: 'Poppins', sans-serif;
+  color: #224740;
+}
+
+.moving-forward h4 {
+  font-size: 26px;
+  margin-bottom: 15px;
+  font-family: 'DM Serif Text', serif;
+  color: #2c5046;
+}
+
+.moving-forward p {
+  font-size: 16px;
+  line-height: 1.7;
+  margin-bottom: 15px;
+}
 
 </style>
 </head>
@@ -375,8 +399,11 @@ hr {
                 We extend our heartfelt gratitude to <strong>Dr. S. Gajalakshmi</strong>, Head of the Department, for providing us with the invaluable opportunity to undertake and showcase this project under her guidance.
             </p>
             <p>
-                We also extend our sincere thanks to <strong>Dr. Manmohan</strong> and <strong>Dr. Kiran Kumar</strong>, whose expert guidance, technical suggestions, and insightful inputs played a pivotal role in shaping the direction and success of this project.
+                We also extend our sincere thanks to our professors <strong>Dr. Manmohan</strong> and <strong>Dr. Kiran Kumar</strong>, whose expert guidance, technical suggestions, and insightful inputs played a pivotal role in shaping the direction and success of this project.
             </p>
+            <p>
+              We would also like to thank and acknowledge our professors at the Department of Computer Science for equipping up with the required resources and skill set that has been necessary for carrying out this project
+          </p>
         </div>
     </div>
 
@@ -404,7 +431,23 @@ hr {
             </div>
             
         </div>
-    </div>
+        <div class="moving-forward">
+          <h4>Moving Forward</h4>
+          <p>
+            This project is a living map — its value lies in the freshness and accuracy of the data it carries. As we move forward, we are committed to expanding our documentation and improving the depth of information presented here.
+          </p>
+          <p>
+            We warmly welcome contributions from fellow students and researchers at Pondicherry University. If you come across flora or fauna we’ve missed, or can help validate current sightings, we encourage you to get in touch.
+          </p>
+          <p>
+            Ultimately, this platform thrives only through shared effort. With the support of our vibrant community — from students of PU— we are confident this initiative will remain both current and impactful.
+          </p>
+          <p>
+            🌱 View or contribute to the project on GitHub:
+            <a href="https://github.com/Angiigna/EVNS" target="_blank" class="github-link">github.com/Angiigna/EVNS</a>
+          </p>
+        </div>
+        
 </footer>
 </div> <!-- end of .footer-container -->
 
@@ -434,7 +477,7 @@ hr {
         <p>Mohan Raju</p>
     </div>
     <div class="member">
-        <img src="shwetha.jpg" alt="Shwetha P">
+        <img src="./team/shwetha.jpg" alt="Shwetha P">
         <p>Shwetha P</p>
     </div>
     <div class="member">
@@ -446,7 +489,7 @@ hr {
         <p>Tuvvadoddi Chandu</p>
     </div>
     <div class="member">
-        <img src="viswa.jpg" alt="Viswapriya R">
+        <img src="./team/viswa.jpg" alt="Viswapriya R">
         <p>Viswapriya R</p>
     </div>
 </div>
