--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ hr {
         <p>Mohan Raju</p>
     </div>
     <div class="member">
-        <img src="shwetha.jpg" alt="Shwetha P">
+        <img src="/team/shwetha.jpg" alt="Shwetha P">
         <p>Shwetha P</p>
     </div>
     <div class="member">
