added all photos

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ hr {
 .member p {
     font-size: 13px;
     margin-top: 8px;
-    color: #d7f4de;
+    color: #224740;
 }
 .moving-forward {
   margin: 60px auto;
@@ -457,11 +457,11 @@ hr {
         <p>Athul Krishnan TR</p>
     </div>
     <div class="member">
-        <img src="boda.jpg" alt="Boda Kaveri">
+        <img src="./team/kaveri.jpg" alt="Boda Kaveri">
         <p>Boda Kaveri</p>
     </div>
     <div class="member">
-        <img src="fuad.jpg" alt="Fuad PP">
+        <img src="./team/fuad.jpg" alt="Fuad PP">
         <p>Fuad PP</p>
     </div>
     <div class="member">
@@ -473,7 +473,7 @@ hr {
         <p>Lakshmi Nandana B</p>
     </div>
     <div class="member">
-        <img src="mohan.jpg" alt="Mohan Raju">
+        <img src="./team/mohan.jpg" alt="Mohan Raju">
         <p>Mohan Raju</p>
     </div>
     <div class="member">
@@ -485,7 +485,7 @@ hr {
         <p>Sivangi Sankar</p>
     </div>
     <div class="member">
-        <img src="chandu.jpg" alt="Tuvvadoddi Chandu">
+        <img src="./team/chandu.jpg" alt="Tuvvadoddi Chandu">
         <p>Tuvvadoddi Chandu</p>
     </div>
     <div class="member">
