--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=DM+Serif+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 * {
     margin: 0;
@@ -18,28 +19,29 @@
 body {
     background: linear-gradient(to top, rgb(200, 241, 200), rgb(251, 251, 251));
     font-family: 'Poppins', sans-serif;
-    color: #224740;
+    color: #216d96;
     user-select: none;
     touch-action: manipulation;
 }
 header {
-    background: linear-gradient(to top, green, rgb(7, 69, 26));
-    padding: 30px 180px;
-    border-radius: 0 0 80px 80px;
+    background-image: url('Header/WhatsApp Image 2025-07-26 at 12.09.10_2242f59f.jpg');
+    /*background: linear-gradient(to top, green, rgb(7, 69, 26));
     color: white;
-    box-shadow: 0 4px 8px rgba(58, 129, 7, 0.4);
+    box-shadow: 0 4px 8px rgba(58, 129, 7, 0.4);*/
+     padding: 30px 180px;
     position: relative;
 }
 header img {
     height: 60px;
 }
 header h2 {
-    font-family: 'DM Serif Text', serif;
-    font-size: 50px;
+    font-family: 'Playfair Display', serif;
+    font-size: 60px;
     position: absolute;
     right: 160px;
-    top: 35px;
-    font-weight: 400;
+    top: 18px;
+    font-weight: 700;
+    text-shadow: 1px 1px 2px rgba(104, 220, 224, 0.1);
 }
 
 #video {
@@ -83,9 +85,10 @@ header h2 {
     margin-bottom: 20px;
 }
 #obj p {
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.6;
     color: #3d5d54;
+    font-family: 'DM Serif Text', serif;
 }
 
 .row {
@@ -109,15 +112,17 @@ header h2 {
 .txt {
     max-width: 500px;
     padding: 10px;
+    font-family: 'Secure Sans Pro', serif;
+    font-size: 36px;
 }
 .txt h6 {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 10px;
-    font-family: 'DM Serif Text', serif;
+     font-family: 'Secure Sans Pro', serif;
 }
 .txt p {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.5;
 }
 
@@ -201,7 +206,9 @@ hr {
 }
 
 .footer-card p {
-    font-size: 15px;
+    font-family: 'Secure Sans Pro', serif;
+    font-size: 18px;
+    font-weight: 200;
     line-height: 1.6;
 }
 .acknowledgment-section {
@@ -247,19 +254,22 @@ hr {
 .ack-text {
     flex: 3;
     min-width: 280px;
+     font-family: 'Secure Sans Pro', serif;
+     font-size: 36px;
 }
 
 .ack-text h5 {
-    font-family: 'DM Serif Text', serif;
-    font-size: 28px;
+    font-family: 'Secure Sans Pro', serif;
+    font-size: 36px;
     margin-bottom: 20px;
     color: #d7f4de;
 }
 
 .ack-text p {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.8;
     margin-bottom: 15px;
+    font-weight: 50;
 }
 .team-photos {
     margin-top: 30px;
@@ -290,7 +300,7 @@ hr {
 }
 
 .member p {
-    font-size: 13px;
+    font-size: 12px;
     margin-top: 8px;
     color: #224740;
 }
@@ -302,19 +312,19 @@ hr {
   border-radius: 15px;
   max-width: 1000px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Secure Sans Pro', serif;
   color: #224740;
 }
 
 .moving-forward h4 {
-  font-size: 26px;
+  font-size: 36px;
   margin-bottom: 15px;
   font-family: 'DM Serif Text', serif;
   color: #2c5046;
 }
 
 .moving-forward p {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.7;
   margin-bottom: 15px;
 }
@@ -341,7 +351,7 @@ hr {
 <div id="obj">
     <h4>Why It Matters</h4>
     <p>
-        Amid the hustle of academic life, an incredible world of life quietly flourishes at Pondicherry University. From towering trees to elusive birds and streetwise animals, nature weaves an unseen tapestry across our campus. <br><br>Through Green Mapping, we invite you to slow down, look closer, and reconnect with the living world that sustains and inspires us all.
+        Amid the hustle of academic life, an incredible world of life quietly flourishes at Pondicherry University. From towering trees to elusive birds and streetwise animals, nature weaves an unseen tapestry across our campus. Through Green Mapping, we invite you to slow down, look closer, and reconnect with the living world that sustains and inspires us all.
     </p>
 </div>
 
@@ -421,7 +431,7 @@ hr {
         <div class="footer-card">
             <h5>Our Team</h5>
             <p>
-                We are a vibrant group of 3rd-year Integrated Computer Science students, united by a shared passion for nature and technology. Together, we crafted this interactive journey through the green heart of Pondicherry University.
+                We are a vibrant group of 4th-year Integrated Computer Science and MCA students, united by a shared passion for nature and technology. Together, we crafted this interactive journey through the green heart of Pondicherry University.
             </p>
             <p>
                 With regards,<br>
