Added Home option in nav before changing ui

--- a/home1.html
+++ b/home1.html
@@ -16,6 +16,7 @@
         <li><a href="#" id="flora-btn">Flora</a></li>
         <li><a href="#" id="fauna-btn">Fauna</a></li>
         <li><a href="/gallery.html">Gallery</a></li>
+        <li><a href="/index.html">Home</a></li>
       </ul>
     </div>
 
