Created the crow page

--- a/newversion/new.html
+++ b/newversion/new.html
@@ -206,36 +206,36 @@
         <div class="row">
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="100">
-              <img src="/Dogs/campus/lhc.jpg" class="card-img-top" alt="Campus Dog 1">
+              <img src="/crows/kc1.jpg" class="card-img-top" alt="Campus Crow 1">
               <div class="card-body">
-                <p class="card-text">Description of campus fauna.</p>
+                <p class="card-text">A single crow perched on a tree near girl's hostel.</p>
               </div>
             </div>
           </div>
   
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="200">
-              <img src="/Dogs/campus/ponlait.jpg" class="card-img-top" alt="Campus Dog 2">
+              <img src="/crows/mc1.jpg" class="card-img-top" alt="Campus Dog 2">
               <div class="card-body">
-                <p class="card-text">More details about campus fauna.</p>
+                <p class="card-text">Crows during roosting hour near Madam Curie hostel</p>
               </div>
             </div>
           </div>
   
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="300">
-              <img src="/Dogs/Boys/auro4.jpg" class="card-img-top" alt="Other Fauna 1">
+              <img src="/crows/admin.jpg" class="card-img-top" alt="Other Fauna 1">
               <div class="card-body">
-                <p class="card-text">Information about other fauna.</p>
+                <p class="card-text">A murder of crows spotted near the admin block</p>
               </div>
             </div>
           </div>
   
           <div class="col-md-3">
             <div class="card" data-aos="fade-up" data-aos-delay="400">
-              <img src="/Dogs/campus/sj.jpg" class="card-img-top" alt="Other Fauna 2">
+              <img src="/crows/mc2.jpg" class="card-img-top" alt="Other Fauna 2">
               <div class="card-body">
-                <p class="card-text">Additional info on local fauna.</p>
+                <p class="card-text">Crows tend to cluster around the dining mess</p>
               </div>
             </div>
           </div>
