connected the home page to the new html

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ hr {
         <source src="PU Google Earth.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <button id="explorebt" onclick="window.location.href='./home1.html'">Explore →</button>
+    <button id="explorebt" onclick="window.location.href='/newversion/new.html'">Explore →</button>
 </div>
 
 <hr>
@@ -460,50 +460,6 @@ hr {
         
 </footer>
 </div> <!-- end of .footer-container -->
-
-<div class="team-photos">
-    <div class="member">
-        <img src="./team/Athul.jpg" alt="Athul Krishnan TR">
-        <p>Athul Krishnan TR</p>
-    </div>
-    <div class="member">
-        <img src="./team/kaveri.jpg" alt="Boda Kaveri">
-        <p>Boda Kaveri</p>
-    </div>
-    <div class="member">
-        <img src="./team/fuad.jpg" alt="Fuad PP">
-        <p>Fuad PP</p>
-    </div>
-    <div class="member">
-        <img src="./team/gokul.jpg" alt="Gokul G">
-        <p>Gokul G</p>
-    </div>
-    <div class="member">
-        <img src="./team/maalu.jpg" alt="Lakshmi Nandana B">
-        <p>Lakshmi Nandana B</p>
-    </div>
-    <div class="member">
-        <img src="./team/mohan.jpg" alt="Mohan Raju">
-        <p>Mohan Raju</p>
-    </div>
-    <div class="member">
-        <img src="/team/shwetha.jpg" alt="Shwetha P">
-        <p>Shwetha P</p>
-    </div>
-    <div class="member">
-        <img src="./team/me.jpg" alt="Sivangi Sankar">
-        <p>Sivangi Sankar</p>
-    </div>
-    <div class="member">
-        <img src="./team/chandu.jpg" alt="Tuvvadoddi Chandu">
-        <p>Tuvvadoddi Chandu</p>
-    </div>
-    <div class="member">
-        <img src="./team/viswa.jpg" alt="Viswapriya R">
-        <p>Viswapriya R</p>
-    </div>
-</div>
-
 
 
 <script>
