--- a/newversion/new.html
+++ b/newversion/new.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="Pondy_Univ_logo1.png" alt="Logo" width="35" height="35" class="me-2">
+        <img src="/Pondicherry_University_logo_24bc5db39a.webp" alt="Logo" width="80" height="80" class="me-2">
         Pondicherry University
       </a>
 
@@ -247,94 +247,66 @@
   </section>
   
   
-  
-  <section id="credits">
-    <div class="container" data-aos="fade-up">
-      <h2>Credits</h2>
-      <p>This project was made possible through the contributions of the following individuals. Each person has dedicated their skills and expertise to help create and bring this vision to life. Below are the key contributors:</p>
-      <div class="card-row">
-        <div class="card" data-aos="fade-up" data-aos-delay="100">
-          <img src="path_to_image1.jpg" class="card-img-top" alt="Person 1">
-          <div class="card-body">
-            <h5 class="card-title">John Doe</h5>
-            <p class="card-text">Lead Developer and Designer</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="200">
-          <img src="path_to_image2.jpg" class="card-img-top" alt="Person 2">
-          <div class="card-body">
-            <h5 class="card-title">Jane Smith</h5>
-            <p class="card-text">Project Manager</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="300">
-          <img src="path_to_image3.jpg" class="card-img-top" alt="Person 3">
-          <div class="card-body">
-            <h5 class="card-title">Alex Johnson</h5>
-            <p class="card-text">Content Writer</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="400">
-          <img src="path_to_image4.jpg" class="card-img-top" alt="Person 4">
-          <div class="card-body">
-            <h5 class="card-title">Emily Clark</h5>
-            <p class="card-text">UI/UX Designer</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="500">
-          <img src="path_to_image5.jpg" class="card-img-top" alt="Person 5">
-          <div class="card-body">
-            <h5 class="card-title">Michael Brown</h5>
-            <p class="card-text">Developer</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="600">
-          <img src="path_to_image6.jpg" class="card-img-top" alt="Person 6">
-          <div class="card-body">
-            <h5 class="card-title">Sarah Lee</h5>
-            <p class="card-text">Researcher</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="700">
-          <img src="path_to_image7.jpg" class="card-img-top" alt="Person 7">
-          <div class="card-body">
-            <h5 class="card-title">David Kim</h5>
-            <p class="card-text">Graphic Designer</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="800">
-          <img src="path_to_image8.jpg" class="card-img-top" alt="Person 8">
-          <div class="card-body">
-            <h5 class="card-title">Jessica White</h5>
-            <p class="card-text">Tester</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="900">
-          <img src="path_to_image9.jpg" class="card-img-top" alt="Person 9">
-          <div class="card-body">
-            <h5 class="card-title">Chris Martin</h5>
-            <p class="card-text">Support Specialist</p>
-          </div>
-        </div>
-  
-        <div class="card" data-aos="fade-up" data-aos-delay="1000">
-          <img src="path_to_image10.jpg" class="card-img-top" alt="Person 10">
-          <div class="card-body">
-            <h5 class="card-title">Nina Patel</h5>
-            <p class="card-text">Marketing & Outreach</p>
-          </div>
-        </div>
-      </div>
+<section id="credits">
+  <div class="container">
+    <h2>Credits</h2>
+    <p class="credits-intro">
+      This project was made possible through the contributions of the following individuals. We thank them for their unique roles in bringing this vision to life.
+    </p>
+<div class="credits-gallery">
+  <!-- Row 1: 6 members -->
+  <div class="credits-row">
+    <div class="credits-member">
+      <img src="/team/Athul.jpg" alt="Athul Krishnan TR">
+      <p>Athul Krishnan TR</p>
     </div>
-  </section>
+    <div class="credits-member">
+      <img src="/team/kaveri.jpg" alt="Boda Kaveri">
+      <p>Boda Kaveri</p>
+    </div>
+    <div class="credits-member">
+      <img src="/team/fuad.jpg" alt="Fuad PP">
+      <p>Fuad PP</p>
+    </div>
+    <div class="credits-member">
+      <img src="/team/gokul.jpg" alt="Gokul G">
+      <p>Gokul G</p>
+    </div>
+    <div class="credits-member">
+      <img src="/team/maalu.jpg" alt="Lakshmi Nandana B">
+      <p>Lakshmi Nandana B</p>
+    </div>
+  
+  </div>
+
+  <!-- Row 2: 4 members centered -->
+  <div class="credits-row centered">
+      <div class="credits-member">
+      <img src="/team/mohan.jpg" alt="Mohan Raju">
+      <p>Mohan Raju</p>
+    </div>
+    <div class="credits-member">
+      <img src="/team/shwetha.jpg" alt="Shwetha P">
+      <p>Shwetha P</p>
+    </div>
+    <div class="credits-member">
+      <img src="/team/me.jpg" alt="Sivangi Sankar">
+      <p>Sivangi Sankar</p>
+    </div>
+    <div class="credits-member">
+      <img src="/team/chandu.jpg" alt="Tuvvadoddi Chandu">
+      <p>Tuvvadoddi Chandu</p>
+    </div>
+    <div class="credits-member">
+      <img src="/team/viswa.jpg" alt="Viswapriya R">
+      <p>Viswapriya R</p>
+    </div>
+  </div>
+</div>
+
+  </div>
+</section>
+
   
 
   <footer>
