removed the apikey to make repo public

--- a/home1.html
+++ b/home1.html
@@ -847,7 +847,7 @@
 
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEowV4krMWS_FrAm70UP4wOAaBiZ3mvkQ&callback=initMap&v=weekly&libraries=visualization"
+      src="https://maps.googleapis.com/maps/api/js?key=#callback=initMap&v=weekly&libraries=visualization"
       async
       defer
     ></script>
